--- a/.github/workflows/stale.yml
+++ b/.github/workflows/stale.yml
@@ -1,8 +1,6 @@
 name: Mark stale issues and pull requests
 
-on:
-  schedule:
-  - cron: "0 0 * * *"
+on: push
 
 jobs:
   stale:
@@ -19,4 +17,4 @@ jobs:
         stale-pr-label: 'no-pr-activity'
         exempt-issue-label: 'no-issue-activity'
         exempt-pr-label: 'no-pr-activity'
-        days-before-stale: 30
+        days-before-stale: 0
